# automation-task

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  settings.py
core/: __init__.py  base_page.py  element_handler.py
data/: test_data.yaml
pages/: __init__.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
tests/: __init__.py  conftest.py  test_cart.py  test_checkout.py  test_inventory.py  test_login.py
utils/: __init__.py  file_handler.py  logger.py
